--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,12 +10,16 @@ project(FMU_agent VERSION 1.0.0 LANGUAGES C CXX)
 
 # PROJECT SETTINGS #############################################################
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_C_STANDARD 19)
+set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SRC_DIR ${CMAKE_CURRENT_LIST_DIR}/src)
 
 if(UNIX AND NOT APPLE)
   set(LINUX TRUE)
+endif()
+
+if(CMAKE_BUILD_TYPE STREQUAL "")
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build." FORCE)
 endif()
 
 # Get MADS prefix
@@ -27,12 +31,12 @@ execute_process(
 message(STATUS "MADS_PREFIX: ${MADS_PREFIX}")
 include_directories(${MADS_PREFIX}/include)
 link_directories(${MADS_PREFIX}/lib)
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${MADS_PREFIX})
-endif()
+set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${MADS_PREFIX})
 message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}") 
 
+# No warning on FetchContent_Populate
+cmake_policy(SET CMP0169 OLD)
 
 #   ____                            _                 _           
 #  |  _ \  ___ _ __   ___ _ __   __| | ___ _ __   ___(_) ___  ___ 
@@ -51,6 +55,7 @@ FetchContent_Declare(cxxopts
 set(FMI4C_BUILD_TESTS ON CACHE BOOL "" FORCE)
 set(FMI4C_BUILD_TOOLS OFF CACHE BOOL "" FORCE)
 set(FMI4C_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+set(FMI4C_BUILD_SHARED OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
     fmi4c
     GIT_REPOSITORY https://github.com/pbosetti/fmi4c.git
@@ -73,8 +78,18 @@ FetchContent_Declare(rang
   GIT_SHALLOW    TRUE
 )
 
-FetchContent_MakeAvailable(cxxopts fmi4c json rang)
-
+# Disabilita le install() della dependency
+set(_old_skip ${CMAKE_SKIP_INSTALL_RULES})
+set(CMAKE_SKIP_INSTALL_RULES ON)
+FetchContent_Populate(cxxopts)
+add_subdirectory(${cxxopts_SOURCE_DIR} ${cxxopts_BINARY_DIR} EXCLUDE_FROM_ALL)
+FetchContent_Populate(fmi4c)
+add_subdirectory(${fmi4c_SOURCE_DIR} ${fmi4c_BINARY_DIR} EXCLUDE_FROM_ALL)
+FetchContent_Populate(json)
+add_subdirectory(${json_SOURCE_DIR} ${json_BINARY_DIR} EXCLUDE_FROM_ALL)
+FetchContent_Populate(rang)
+add_subdirectory(${rang_SOURCE_DIR} ${rang_BINARY_DIR} EXCLUDE_FROM_ALL)
+set(CMAKE_SKIP_INSTALL_RULES ${_old_skip})
 
 #   ____        _ _     _ 
 #  | __ ) _   _(_) | __| |
@@ -90,17 +105,12 @@ add_library(fmiinterface STATIC ${LIB_SOURCES})
 target_link_libraries(fmiinterface fmi4c)
 
 
-#   ___           _        _ _ 
-#  |_ _|_ __  ___| |_ __ _| | |
-#   | || '_ \/ __| __/ _` | | |
-#   | || | | \__ \ || (_| | | |
-#  |___|_| |_|___/\__\__,_|_|_|
-#                             
-if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
-  set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${USR_DIR})
-endif()
-install(TARGETS ${TARGET_LIST}
-  LIBRARY DESTINATION lib
-  RUNTIME DESTINATION bin
-  ARCHIVE DESTINATION lib
-)
+#   _____ __  __ _   _     
+#  |  ___|  \/  | | | |___ 
+#  | |_  | |\/| | | | / __|
+#  |  _| | |  | | |_| \__ \
+#  |_|   |_|  |_|\___/|___/
+#
+
+add_subdirectory(models)
+
