Build on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,10 @@ endif()
 # Get MADS prefix
 execute_process(
   COMMAND mads -p
-  OUTPUT_VARIABLE MADS_PREFIX
+  OUTPUT_VARIABLE MADS_PREFIX_RAW
   OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+file(TO_CMAKE_PATH "${MADS_PREFIX_RAW}" MADS_PREFIX)
 include_directories(${MADS_PREFIX}/include)
 link_directories(${MADS_PREFIX}/lib)
 set_property(CACHE CMAKE_INSTALL_PREFIX PROPERTY VALUE ${MADS_PREFIX})
